Projet GL/test/src/test/deca/context/valid/increment4/extends-object.deca
// Test class extends Object

class A extends Object{}