Projet GL/test/src/test/deca/context/invalid/increment4/class-extends-same-class.deca
// Test : class A extends a

// Historique : cree le 17/01/2023

class A extends A{}